<resources>
    <string name="app_name">Chartered Box DonotMiss</string>
    <string name="msg_enter_valid_phone_number">Please enter a valid mobile number.</string>
    <string name="msg_please_enter_otp">Please enter an OTP.</string>
    <string name="msg_enter_correct_otp">Please enter valid OTP.</string>
    <string name="msg_enter_valid_email_address">Please enter valid Email ID.</string>
    <string name="msg_phone_number_verified_successfully">Mobile number verified successfully.</string>
    <string name="msg_email_verified_successfully">Email ID verified successfully.</string>
    <string name="label_app_name">Compliance\nAssistant</string>
    <string name="label_country_code">+91</string>
    <string name="hint_enter_your_phone_number">Enter your mobile number</string>
    <string name="label_get_otp">Get OTP</string>
    <string name="hint_enter_otp">Enter OTP</string>
    <string name="label_verify_otp">Verify OTP</string>
    <string name="label_verify_and_create_account">Verify &amp; Create Account</string>
    <string name="hint_enter_your_email_address">Enter your email address</string>
    <string name="label_get_otp_on_email">Get OTP on Email</string>
    <string name="msg_declaration">Allow Chartered Box DonotMiss App to read your incoming SMS and automatically forward your SMS to your registered email.
\n\nYou can opt-out SMS permission anytime by simply denying the permission from App info settings.
\n\nBy clicking the \'I Agree\' button, you agree to Chartered Box DonotMiss App\'s above policy.</string>
    <string name="about_us">Chartered Box DonotMiss App is a service that allows to forward your SMS to registered Email address.\n\nChartered Box DonotMiss App also allows you to share your SMS via app to other apps.\n\nYou can contact the Chartered Box DonotMiss team by clicking on Contact us button.</string>
    <string name="alert_battery_optimization">Please note that if app is running in background and battery optimization is enabled then Chartered Box DonotMiss app will not be able to read/forward incoming SMS.\n\nPlease disable battery optimization by using below steps.\n1) Go to Chartered Box DonotMiss <b>App Info</b> Settings\n2) Select <b>Battery</b> option\n3) Turn off battery optimization\n</string>
</resources>