<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_30sdp"
            android:gravity="center"
            android:text="@string/label_app_name"
            android:textColor="@color/purple_500"
            android:textSize="@dimen/_30ssp"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/lnrMobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/_15sdp"
            android:visibility="gone">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/label_country_code"
                    android:textStyle="bold"
                    android:textColor="@color/purple_500"
                    android:textSize="@dimen/_15ssp" />

                <EditText
                    android:id="@+id/idEdtPhoneNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_10sdp"
                    android:hint="@string/hint_enter_your_phone_number"
                    android:inputType="number"
                    android:maxLength="10"
                    android:padding="@dimen/_15sdp"
                    android:textColorHint="@color/purple_200"
                    tools:ignore="TextFields" />

            </LinearLayout>

            <Button
                android:id="@+id/idBtnGetOtp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                android:text="@string/label_get_otp"
                android:textAllCaps="false" />

            <EditText
                android:id="@+id/idEdtOtp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:hint="@string/hint_enter_otp"
                android:maxLength="6"
                android:importantForAutofill="no"
                android:inputType="number"
                android:padding="15sp" />

            <Button
                android:id="@+id/idBtnVerify"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                android:text="@string/label_verify_otp"
                android:textAllCaps="false" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/lnrEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/_15sdp"
            android:visibility="gone">

            <EditText
                android:id="@+id/edtEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                android:hint="@string/hint_enter_your_email_address"
                android:inputType="textEmailAddress"
                android:textColorHint="@color/purple_200" />

            <Button
                android:id="@+id/btnGetOtpOnEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                android:text="@string/label_get_otp_on_email"
                android:textAllCaps="false" />

            <EditText
                android:id="@+id/edtEmailOtp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                android:maxLength="6"
                android:hint="@string/hint_enter_otp"
                android:importantForAutofill="no"
                android:inputType="number"
                tools:ignore="TextFields" />

            <Button
                android:id="@+id/btnEmailVerify"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                android:text="@string/label_verify_otp"
                android:textAllCaps="false" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lnrProgress"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#55000000"
        android:gravity="center"
        android:visibility="gone">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:indeterminate="true"
            android:indeterminateTint="@color/white"
            android:indeterminateTintMode="src_atop" />
    </LinearLayout>

</FrameLayout>